tests/ui/lexer/lex-stray-backslash.stderr
error: unknown start of token: \
  --> $DIR/lex-stray-backslash.rs:1:1
   |
LL | \
   | ^

error: aborting due to 1 previous error

