tests/ui/lexer/lex-stray-backslash.rs
\ //~ ERROR: unknown start of token: \

fn main() {}
